# backend-sample-space

./: .gitmodules  README.md
Docker/: .gitignore  HandBook.md  README.md
Docker/Getting_started_guide/: Dockerfile  compose.yaml
Docker/Getting_started_guide/src/static/js/: app.js
FastAPI/httpx-test-client-basics/: pyproject.toml  requirements.txt
FastAPI/httpx-test-client-basics/app/: main.py
FastAPI/httpx-test-client-basics/tests/: test_api.py
